feat: added search by code or name API
