# docs/swagger.yaml
@@ -96,6 +96,30 @@ paths:
                 $ref: '#/components/schemas/Room'
         404:
           description: Room not found
+  /rooms/search/{codeOrName}:
+    get:
+      summary: Search a specific room using code or name
+      tags:
+        - Room Info
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: codeOrName
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        200:
+          description: Room details
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Room'
+        404:
+          description: Room not found
+        500:
+          description: Server Error
   /rooms/{id}/players:
     post:
       summary: Add a player to the room
